Add DPS auth swagger
